fixed chips jumping

--- a/src/features/locators/locatorsPage/locatorsList.less
+++ b/src/features/locators/locatorsPage/locatorsList.less
@@ -23,7 +23,7 @@
     }
 
     &-header {
-      padding: 0 12px 0 8px;
+      padding-left: 8px;
       margin-top: 13px;
       margin-bottom: 8px;
 
@@ -31,8 +31,9 @@
         flex-grow: 1;
         flex-shrink: 0;
         display: flex;
+        align-items: center;
         gap: 8px;
-        line-height: 24px;
+        height: 28px;
       }
 
       &-collapse {
@@ -42,7 +43,7 @@
       }
 
       .jdn__locatorsList_button {
-        margin-right: 3px;
+        margin-right: 1px;
         height: 28px;
       }
 
